--- a/Introduction.tex
+++ b/Introduction.tex
@@ -96,7 +96,7 @@ This is an extended version of \cite{AL13}.
 
 \begin{itemize}
 
-\item Formalize the DPLL proof system and a proof of its completeness.
+\item Formalise the DPLL proof system and a proof of its completeness.
 
 \item Extract a standard DPLL SAT algorithm from the formalisation into a functional programming language and test its performance
 
