--- a/BackgroundLogic.tex
+++ b/BackgroundLogic.tex
@@ -260,7 +260,7 @@ to program extraction.
 
 \section{Type}
 
-In the following section we shall discuss the type of formulas. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formula.  Finally we define what it means for a term to realize a formula.
+In the following section we shall discuss the type of formulas. We shall begin by defining the type of a formula such that if the formula is proven the type corresponds to the type of the extracted program from the proof. Secondly, we shall define the lambda calculus program that can be extracted from a proof term. These proof terms are generated in Minlog by applying the natural deduction calculus to a formula.  Finally we define what it means for a term to realise a formula.
 
 In order to perform program extraction on a proof we must first deduce the
 type of the program to be extracted from a formula. To this end, every formula $A$ is assigned a type $\tau(A)$ which corresponds to the type of the program extracted from $A$. It is possible for a formula to have no computation content i.e. $\tau(A) = \epsilon$; such formulas are called \emph{Harrop formulas}.
@@ -421,15 +421,15 @@ f (x :: xs) = G x xs(f xs)
 
 When program extraction is applied to an inductive definition a data structure is extracted. Inductive definitions are assigned algebras 
 where the types of constructors of the algebras are determined by the types of the closure axioms.
-\section{Realizability}\label{sec:realizability}
-We need to have a notion of what it means for an extracted program to realize
-a formula. The notion that we define to do this is called realizability which takes shape as a formula $r \textbf{r} A$. This can be read as
-a term $r$ realizes a formula $A$. If $\tau(A) \neq \epsilon$ then $r$ is of type $\tau (A)$,
-otherwise $r$ is the symbol $\epsilon$. We also need to define realizability
+\section{Realisability}\label{sec:realisability}
+We need to have a notion of what it means for an extracted program to realise
+a formula. The notion that we define to do this is called realisability which takes shape as a formula $r \textbf{r} A$. This can be read as
+a term $r$ realises a formula $A$. If $\tau(A) \neq \epsilon$ then $r$ is of type $\tau (A)$,
+otherwise $r$ is the symbol $\epsilon$. We also need to define realisability
 for predicates. If we have a predicate P
 with an arity $\vec{s}$ then there are two possibilities here. One is that
 $P$ is a predicate variable with an assigned $\alpha_P$ for this we create a new
-predicate variable $P^{\textbf{r}}$ with an arity of $\alpha_P,\vec{\rho}$. In Minlog this corresponds to inductive definitions being realized algebras.
+predicate variable $P^{\textbf{r}}$ with an arity of $\alpha_P,\vec{\rho}$. In Minlog this corresponds to inductive definitions being realised algebras.
 The other case is that $P$ is a predicate constant, if this is the case then
 we use the predicate constant.
 
