--- a/BackgroundModelChecking.tex
+++ b/BackgroundModelChecking.tex
@@ -223,7 +223,7 @@ The model checking algorithm performs a search, using the double depth first sea
 \begin{lstlisting}[caption = The Double Depth First Search Algorithm, mathescape]
 Emptiness(A)
 $\forall s_0 \in S_0$ do
-	dfs1(s_0,A,HT)
+	dfs1($s_0$,A,HT)
 terminate(False);
 
 dfs1(s,A)
