--- a/Introduction.tex
+++ b/Introduction.tex
@@ -35,7 +35,7 @@ The final set of  results of this thesis is the modelling of the European Rail T
 
 \section{Publications}
 
-Material from the following publications forms part of this thesis:
+The results in this thesis have been published in the following articles:
 
 \textbf{\ul{1. Extracting a DPLL Algorithm} (with Berger and Seisenberger), MFPS 2012, \cite{AL12}}
 The formalisation of the DPLL proof system and its completeness are described along with the use of non-computational quantifiers to optimise the extracted program. The extracted program is run as a term inside the Minlog system on pigeon hole formulae.
@@ -58,10 +58,10 @@ Material from the following publications formed part of my MRes thesis and influ
 Two approaches are described to model and verify train control systems using the industrial modelling and verification tool SCADE~\cite{Scade}. The first involves the translation of ladder logic into the SCADE language and then applying SCADE's built in model checker to verify safety properties. The second approach involves segment of railway in a modular fashion allowing for the individual components to be verified before being combined together.
 
 
-\textbf{\ul{6. Verification of Solid State Interlocking Programs} (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), DTU Technical Report, \cite{AL13}}
+\textbf{\ul{6. Verification of Solid State Interlocking Programs} (with Chadwick, James, Kanso, Moller, Roggenbach, Seisenberger and Setzer), DTU Technical Report, \cite{AL13}}
 This paper aims to provide a complete body of knowledge on the subject of verifying ladder logic programs for solid state interlockings. It contains the combined work of three MRes theses and associated research papers condensed to form a single methodology.
 
-\textbf{\ul{7. Verification of Solid State Interlocking Programs} (with Chadwick, James, Kanso, Moller, Roggenbach and Seisenberger), Lecture Notes in Computer Science, \cite{AL14a}}
+\textbf{\ul{7. Verification of Solid State Interlocking Programs} (with Chadwick, James, Kanso, Moller, Roggenbach, Seisenberger and Setzer), Lecture Notes in Computer Science, \cite{AL14a}}
 This is an extended version of \cite{AL13}.
 
 \section{Thesis Outline}
@@ -139,7 +139,7 @@ Hard disk: &  750GB 7200 RPM  SATA\\  \hline
 The Minlog implementations described in Chapters \ref{chapter:dpllminlog} and \ref{chapter:cdclproof} and Real Time Maude implementations described in \ref{chap:modelertms} and \ref{chap:verifyertms} are available at \url{http://cs.swan.ac.uk/~csal/phd/index.html}.
 
 \section{Acknowledgements}
-There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Dr Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemen's end and for dealing with my queries and questions via email. My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
-Dr Fredrik Nordvall Forsberg has made several contributions to this thesis. Firstly, he wrote the automatic translation which enabled Minlog terms to be translated into Haskell during a stay at  LMU Munich with Prof. Helmut Schwichtenberg.  I would have been unable to perform such an in-depth analysis of the extracted program without it. He was also a co-author on a paper and acted with a large amount professionalism throughout the writing period. Dr Ulrich Berger has provide his expert guidance numerous times both as an co-author and as a second supervisor during Monika's maternity leave. Dr Markus Roggenbach also acted as a second supervisor during Monika's maternity leave. Amongst other things Markus introduced me to Hybrid Automata as well as provided valuable knowledge on the Railway Domain.  Alison Jones for sharing her in-depth understanding of the English language and for proof reading my thesis.
+There are a great many who have supported me or contributed in some way throughout the writing of this thesis. I would first and foremost like to thank my supervisor Dr Monika Seisenberger for her eternal patience and guidance. She has mentored me since my undergraduate degree and moulded me into the research I am today. Siemens Rail Automation/ Invensys Rail deserve many thanks for their support and valuable technical input throughout the whole of my research career. In particular I would like to thank Simon Chadwick for organising the collaboration from the Siemens' end and for dealing with my queries and questions via email. My mother Sharon Lawrence provided me with many cooked meals and washed my clothes during my stay at her house in the summer of 2014; this enabled me to spend even more of my time on the writing of this thesis.
+Dr Fredrik Nordvall Forsberg has made several contributions to this thesis. Firstly, he wrote the automatic translation which enabled Minlog terms to be translated into Haskell during a stay at  LMU Munich with Prof. Helmut Schwichtenberg.  I would have been unable to perform such an in-depth analysis of the extracted program without it. He was also a co-author on a paper and acted with a large amount professionalism throughout the writing period. Dr Ulrich Berger has provide his expert guidance numerous times both as an co-author and as a second supervisor during Monika's maternity leave. Dr Markus Roggenbach also acted as a second supervisor. Amongst other things Markus introduced me to Hybrid Automata as well as provided valuable knowledge on the Railway Domain. Finally, I would like to thank Alison Jones for sharing her in-depth understanding of the English language and for proof reading my thesis.
 
 
