--- a/Introduction.tex
+++ b/Introduction.tex
@@ -1,24 +1,24 @@
  \thesischapter{Introduction}{Introduction}
 
-This thesis is concerned with the application of formal methods within the Railway Domain and to the tools used when applying formal methods themselves. Firstly we present a new approach to develop verified SAT solving algorithms, which have been applied to the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS), in such a way as to capture the performance of the system and also apply a model checker to verify the system's safety.
+This thesis is concerned with the application of formal methods within the Railway Domain and to the tools used when applying formal methods themselves. Firstly we present a new approach to develop verified SAT solving algorithms, which have been applied to the verification of a real world train control system: the solid state interlocking. Secondly we present an approach to formalise and model the European Rail Traffic Management System (ERTMS), in such a way as to capture the performance of the system and also apply a model checker to verify the system's safety. We hope that by capturing these performance properties, such as the speed of trains, we will be able to measure the capacity of different implementations of the system in the future.
 
 \section{Motivation}
 
 A major problem facing those who design and develop computer systems today is  that of designing and implementing such systems correctly. The answer to this problem is more elusive than it may seem initially due to the underlying complexity of modern systems. The process of checking that a system meets its specification is called \emph{verification}. In industry the most widely used means to verify both hardware and software systems is testing. This checks that for a given input the output of the system is correct with regards to the specification. The biggest downfall of testing is that it is typically used in a \emph{non-exhaustive} manner, due to the fact that most modern systems have a large number of inputs which makes testing each possible combination is not feasible. This problem is further compounded when several systems are operating in parallel and communicating with each other.
 
-One of the most famous and costly errors to occur was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this posses a significant threat the to security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way; it was simply over looked in the case of this particular variable.
+One of the most famous and costly errors to occur was that of the Ariane 5 flight 501\cite{GL97}. A 64-bit floating point number representing horizontal velocity was converted into an 16-bit signed integer resulting in an overflow and a hardware exception being raised. The control system interpreted the hardware exception as position and velocity data which lead it to fly on a self destructive trajectory. Another example of a flawed computer system is "Chip and PIN" smart cards secured by the EMV protocol \cite{JM10}. It is supposed to be the case that only someone with the 4 digit personal identification number (PIN) can make payments with the cards, however it is possible for a fraudster to perform a man-in-the-middle attack and to trick the terminal into believing the PIN was correctly entered when no PIN was entered at all. With over 730 million smart cards in circulation this poses a significant threat to the security of many peoples finances. Both of these problems were avoidable. In the case of the Ariane rocket all that would have been required was an extra line of code or two to prevent the variable over-flowing. Many other variables in the code had been protected against over-flow in this way; it was simply over looked in the case of this particular variable.
 
 
-Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and \emph{formal specification}, which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manner. These formal methods however do not make testing redundant, for example, e.g. would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified? Another problem is that manual formal verification requires a large amount of technical ability to perform and in addition is time consuming. There are a number of automatic verification techniques, however these are typically not complete in the sense that they are not guaranteed to produce an output for every possible input. One area that automatic techniques do perform well in is verifying large but logically un-complex systems, which do occur in industry. It is also beneficial if these systems are part of a product line. If that is the case then a customised verification approach may be developed that exploits similarities between individual implementations of the system.
+Formal methods are a group of approaches that capture certain aspects of the development process with a logical and mathematical basis. This thesis is mostly concerned with \emph{formal verification}, which uses logic and formal reasoning to prove that a program meets its specification, and \emph{formal specification}, which attempts to capture the behaviour of the program in a logic or language with a logical underpinning. The advantage of using formal verification in combination with formal specification is that one can prove that a system satisfies its specification for all inputs in an \emph{exhaustive} manner. These formal methods however do not make testing redundant, for example, e.g. would you rather fly a plane that has been formally verified and never tested or a plane that has been heavily tested but not verified? Formal verification will only check that a system is correct with respect to its specification. There is the question of whether the specification itself is also correct. Testing can validate the system i.e. show that the plane we have made really functions as a plane. Another problem is that manual formal verification requires a large amount of technical ability to perform and in addition is time consuming. There are a number of automatic verification techniques, however these are typically not complete in the sense that they are not guaranteed to produce an output for every possible input. One area that automatic techniques do perform well in is verifying large but logically un-complex systems, which do occur in industry. It is also beneficial if these systems are part of a product line. If that is the case then a customised verification approach may be developed that exploits similarities between individual implementations of the system.
 
 One such automatic verification technique is \emph{model checking} which attempts to exhaustively search the state space of the system and check that a safety property holds in each individual state. This can be done by formulating the model checking problem as a boolean satisfaction problem and then applying a SAT solver to do the search. These SAT solvers have the advantage that they are highly optimised and are typically faster at solving any boolean satisfaction problem, without any problem specific customisation, than any proprietary software. However, low level and complex nature of many SAT solver optimisations makes it harder to reason about the solver's correctness. This causes a problem when such solvers are used in a safety critical environment where their results must be trustworthy. Besides the correctness also
 totality (or universality) of SAT solvers is an issue. For example, in the 2012 SAT competition (www.smtcomp.org) many systems were not total in the sense that they returned
 "Unknown" for certain inputs signifying that they could not deal with the given problem.  There are also numerous specialised model checking algorithms, each of which, is geared towards solving a specific type of problem and comes with their own unique optimisations.
 
 
-Another approach to formal verification is that of interactive theorem proving \cite{HG09,SSD06} where a tool aids with the human driven construction of a formal proof of correctness for a system. These tools have the advantage that the machine can check the human produced proof and they typically include a number of built in tactics that aid in the construction of a proof. Some interactive theorem provers realise the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus.  The process of exploiting this correspondence to produce a program from a proof is called program extraction. This technique allows for the development of programs that are correct by construction as the program comes with a proof that certifies its correctness. The Minlog theorem prover comes with a number specialisations for the purpose of extracting programs from formal proofs.
+Another approach to formal verification is that of interactive theorem proving \cite{HG09,SSD06} where a tool aids with the human driven construction of a formal proof of correctness for a system. These tools have the advantage that the machine can check the human produced proof and they typically include a number of built in tactics that aid in the construction of a proof. Some interactive theorem provers realise the Curry-Howard correspondence \cite{HC34, HC58, WH80} which states that constructive proofs performed using the natural deduction calculus can be viewed as programs in the lambda calculus.  The process of exploiting this correspondence to produce a program from a proof is called \emph{program extraction}. This technique allows for the development of programs that are correct by construction as the program comes with a proof that certifies its correctness. The Minlog theorem prover comes with a number specialisations for the purpose of extracting programs from formal proofs.
 
-The Railway Verification Group at the Computer Science Department of Swansea University (\url{http://www.cs.swan.ac.uk/Rail/}) has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continuously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively un-complex and developed has to comply to the same range of safety requirements.  Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System (ERTMS). This system is developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desirable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
+The Railway Verification Group at the Computer Science Department of Swansea University (\url{http://www.cs.swan.ac.uk/Rail/}) has been researching the development of formal methods for use in real world situations in particular for the development of train control systems. The majority of this work has been in the form of an industrial collaboration with our partner Siemens Rail Automation (UK). Siemens are continuously modernising and improving their development processes and as a part of this are looking to use formal methods for the development of their systems. The Westrace interlocking is one such system that is being considered for treatment by formal methods. These interlockings have the benefits of being large but relatively un-complex and each one has to comply to the same range of safety requirements.  Another product currently under development by Siemens Rail Automation is the European Rail Traffic Management System (ERTMS). This system is developed to a European  standard with each country or individual company producing their own implementation. Since the specification is loose and allows for a wide range for implementations this makes modelling of the system desirable to understand possible behaviours and to ensure safe integration with existing infrastructure. Furthermore, it is an open field  when it comes to substantiating the claim that the ERTMS approach offers a higher performance of the railway compared to the traditional control systems.
 
 
 
